# clean-my-shit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
packaging/macos/: Info.plist  bundle.sh  sign_and_notarize.sh
packaging/windows/: build.ps1  installer.nsi
src/: app.rs  categories.rs  cleaner.rs  main.rs  safety.rs  scanner.rs  util.rs
tools/iconforge/: Cargo.toml
tools/iconforge/src/: main.rs
